--- a/FrontEnd/src/home.html
+++ b/FrontEnd/src/home.html
@@ -9,8 +9,23 @@
 <body>
     <main>
         <div class="head" id="heading">
-            <h2>Web Developer</h2>
+            <h2>Welcome!</h2>
+            <p>Web Developer</p>
             <p>Clean Elegent Code!</p>
+        </div>
+        <div id="Navbar">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Projects</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </div>
+        <div class="about" id="about_me">
+            <div>
+                <h1>About </h1>
+                <p>I am 23 year ols self taught web developer, </p>
+            </div>
         </div>
         <footer>
 
